[gd_scene load_steps=3 format=3 uid="uid://b6wywqeb125g1"]

[ext_resource type="Script" path="res://addons/emvent-system/editor/views/event_file_view.gd" id="1_2deqn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cy8f1"]

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2deqn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Passage Name
"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Untitled Event"
placeholder_text = "Unnamed Passage"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add Command"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_cy8f1")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2

[node name="SaveErrorBox" type="AcceptDialog" parent="."]

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_passage_name_change"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_add_command_pressed"]
